# magic-projects-portfolio

./: .env.example  .flake8  .gitignore  .gitlab-ci.yml  CHANGELOG.md  LICENSE.md  README.md  app.py  docker-compose.yml  poetry.toml  pyproject.toml  requirements.txt
provisioning/do-app-platform/: requirements.txt
provisioning/terraform/: .terraform.lock.hcl  Dockerfile  docker-compose.yml  terraform.tf
src/bas_magic_projects_portfolio/: app.py  utils.py
src/bas_magic_projects_portfolio/static/css/: app.css
src/bas_magic_projects_portfolio/templates/includes/: site-navigation.j2
src/bas_magic_projects_portfolio/templates/layouts/: app.j2
src/bas_magic_projects_portfolio/templates/views/: index.j2  people.j2  project.j2  projects.j2
src/bas_magic_projects_portfolio/templates/views/auth/: 403-access.j2  403-permissions.j2  403.j2  sign-in.j2
src/bas_magic_projects_portfolio/templates/views/legal/: cookies.j2  copyright.j2
static/css/: app.css
support/buildpacks/: docker-compose.yml
templates/layouts/: app.j2
templates/views/: index.j2  project.j2
templates/views/legal/: cookies.j2  copyright.j2  privacy.j2
